<resources>
    <string name="app_name">Rigotti Project</string>
    <string name="label_login_text">Effettua il login</string>
    <string name="label_registrazione_text">Non hai un account?\nRegistrati!</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_registrazione_text">Registrati</string>
    <string name="box_email_text">Email</string>
    <string name="box_pass_text">Password</string>
    <string name="label_home_text">Home</string>
    <string name="test_email">email</string>
    <string name="label_dati_generali_text">Inersici i dati generali</string>
    <string name="btn_procedi_text">Procedi</string>
    <string name="label_nome_text">Nome</string>
    <string name="label_cognome_text">Cognome</string>
    <string name="label_email_text">Email</string>
    <string name="label_confirm_text">Conferma password</string>
    <string name="tv_data">Data di nascita</string>
    <string name="btn_image_text">+</string>
    <string name="text_up_image">Carica un\'immagine</string>
    <string name="label_numero_di_gara">N° di gara</string>
    <string name="label_nazionalita">Nazione</string>
    <string name="label_circuito_preferito">Circuito preferito</string>
    <string name="label_circuito_pi_odiato">Circuito più odiato</string>
    <string name="label_auto_preferita">Auto preferita</string>
    <string name="btn_registrati_text">Registrati</string>
    <string name="immagine_profilo_text">Immagine_profilo</string>
    <string name="btn_cambia_immagine">Aggiorna immagine</string>
    <string name="acc_dati_personali_text">Dati Personali</string>
    <string name="acc_dati_gioco_text">Dati di gioco</string>
    <string name="btn_gestisci_dati_gioco_text">Gestisci dati di gioco</string>
    <string name="btn_cambia_passsword_text">Aggiorna la password</string>
    <string name="btn_elimina_account_text">Elimina account</string>
    <string name="btn_aggiorna_dati_gioco_text">Aggiorna dati</string>
    <string name="title_cambia_password_text">Aggiorna password</string>
    <string name="old_password_text">Inserisci la tua vecchia password</string>
    <string name="text_new_password">Inserisci la nuova password</string>
    <string name="annulla_text">Annulla</string>
    <string name="text_eliminazione_account">Confermi l\'eliminazione del tuo account?</string>
    <string name="text_conferma">Conferma</string>
    <string name="text_campionati">Campionati</string>
    <string name="text_modifica_dati">Modifica dati</string>
    <string name="text_vai_a_campionati">Vai a campionati</string>
    <string name="text_vai_a_modifica_dati">Vai a modifica dati</string>
    <string name="home_info_campionato_text">Visualizza la lista dei campionati disponibili, vedi tutte le loro informazioni e iscriviti per vincere</string>
    <string name="home_info_modifica_taxt">Activity di test per testare processo in background e notifiche all\'utente.</string>
    <string name="todo_text">TODO</string>
    <string name="test_text">test</string>
    <string name="nome_campionato_text">Nome campionato</string>
    <string name="logo_campionato_text">Logo del campionato</string>
    <string name="text_go">GO</string>
    <string name="calendario_text">Vai al calendario,\nvisualizza la lista delle gare!</string>
    <string name="iscritti_text">Vai agli iscritti,\nvisualizza i partecipanti</string>
    <string name="impostazioni_text">Vai alle impostazioni,\nguarda tutte le regole</string>
    <string name="text_classifica">Vai alla classifica piloti e,\nvisualizza classifica dei team</string>
    <string name="text_iscriviti_cancella_iscrizione">Iscriviti/Cancella Iscrizione</string>
    <string name="text_info_forum">Vai al forum:</string>
    <string name="text_forum">www.forum.it</string>
    <string name="text_seq">Sequence</string>
    <string name="text_data">Data</string>
    <string name="esci_text">Esci</string>
    <string name="text_circuito">Circuito</string>
    <string name="text_gara">Gara</string>
    <string name="auto_text">Auto</string>
    <string name="text_classifiche">Classifiche</string>
    <string name="galleria_fotografica">Galleria fotografica</string>
    <string name="testo_galleria">Vai alla galleria fotografica della gara\ne condividi i momenti salienti</string>
    <string name="testo_classifiche">Visualizza la classifica piloti e\nla classifica dei team!</string>
    <string name="inserisci_il_tuo_team_text">Inserisci il tuo team</string>
    <string name="seleziona_un_auto_text">Seleziona un auto</string>
    <string name="team_text">Team</string>
    <string name="iscriviti_text">Iscriviti</string>
    <string name="classifica_piloti_text">Classifica piloti</string>
    <string name="classifica_team_text">Classifica team</string>
    <string name="punti_text">Punti</string>
    <string name="tipo_text">Tipo</string>
    <string name="valore_text">Valore</string>
    <string name="risultati_text">Risultati</string>
    <string name="risultati_long_text">Visualizza la classifica della gara!\nPiloti e Team...</string>
    <string name="risultati_piloti_text">Risultati piloti</string>
    <string name="risultati_team_text">Risultati team</string>
    <string name="text_apri">Apri</string>
    <string name="img_3">img_3_text</string>
    <string name="img_1_text">img_1</string>
    <string name="img_2_text">img_2</string>
    <string name="img_text">img</string>
    <string name="condividi_text">CONDIVIDI</string>
    <string name="seleziona_un_campionato_text">Seleziona un campionato:</string>
    <string name="impostazioni_del_campionato_text">Impostazioni del campionato:</string>
    <string name="modifica_text">Modifica</string>
</resources>
