<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_conferma_eliminazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/text_eliminazione_account"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_conferma_elimina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#F44336"
        android:text="@string/text_conferma"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_annulla_eliminazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/annulla_text"
        android:textColor="#000000" />

</LinearLayout>