<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_tipo_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/tipo_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/edit_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/label_tipo_edit"
        android:text="@string/tipo_text"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/label_valore_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_tipo_edit"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/valore_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/edit_valore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_tipo_edit"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@id/label_valore_edit"
        android:text="@string/valore_text"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/label_tipo_edit"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="@string/modifica_text" />

</RelativeLayout>
